day3-exercitii suplimentare

--- a/Day 3/views/employeelist.html
+++ b/Day 3/views/employeelist.html
@@ -49,6 +49,7 @@
             {{employee.departmentId.departmentName}}
         </td>
         <!--TODO #HR5 add View button-->
+        <td><a class="btn btn-primary btn-lg" role="button" ng-click="viewEmployee(employee.employeeId)">View</a></td>
 
     </tr>
 </table>
