--- a/Day 3/views/demo/math.html
+++ b/Day 3/views/demo/math.html
@@ -1,12 +1,13 @@
 <div>
 
     <!--TODO #7-->
-    <p>Number a: </p>
+    <p>Number a: <input type="number" ng-model="a"> </p>
 
-    <p>Number b: </p>
+    <p>Number b: <input type="number" ng-model="b"></p>
 
     <p>
         <!--TODO Button for calculating values-->
+        <a class="btn btn-primary btn-lg" role="button" ng-click="calculate()">Calculate</a>
         
     </p>
 
